syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/descriptor.proto";

package awyes;

option go_package = "github.com/the-sage-group/awyes/proto";

// Node definition
message Node {
  string name = 1;
  string context = 2;
  int32 version = 3;
  string description = 4;
  repeated google.protobuf.FieldDescriptorProto parameters = 5;
  repeated google.protobuf.FieldDescriptorProto returns = 6;
}

// Edge definition
message Edge {
  string source = 1;
  string target = 2;
}

// Flow definition
message Flow {
  string name = 1;
  string context = 2;
  int32 version = 3;
  string description = 4;
  repeated Node nodes = 5;
  repeated Edge edges = 6;
  repeated google.protobuf.FieldDescriptorProto parameters = 7;
}

// Trip definition
message Trip {
  string id = 1;
  Flow flow = 2;
  map<string, google.protobuf.Value> state = 3;
}

// Event types for streaming execution updates
enum EventType {
  UNKNOWN = 0;
  EXECUTING = 1;
  COMPLETED = 2;
  FAILED = 3;
}

// Event message for streaming execution updates
message Event {
  EventType type = 1;
  Trip trip = 2;
  Node node = 3;
  string label = 4;
  optional string error = 5;
  int64 timestamp = 6;
}

// Request to register a new flow
message RegisterFlowRequest { Flow flow = 1; }
message RegisterFlowResponse { Flow flow = 1; }

// Request to register a new node
message RegisterNodeRequest { Node node = 1; }
message RegisterNodeResponse { Node node = 1; }

// Request to execute a flow
message ExecuteFlowRequest { Flow flow = 1; }
message ExecuteFlowResponse { Trip trip = 1; }

// Request to list nodes
message ListNodesRequest {}
message ListNodesResponse { repeated Node nodes = 1; }

// Request to list flows
message ListFlowsRequest {}
message ListFlowsResponse { repeated Flow flows = 1; }

// Awyes definition
service Awyes {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}
  rpc ListFlows(ListFlowsRequest) returns (ListFlowsResponse) {}
  rpc RegisterFlow(RegisterFlowRequest) returns (RegisterFlowResponse) {}
  rpc ExecuteFlow(ExecuteFlowRequest) returns (ExecuteFlowResponse) {}
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse) {}
  rpc RunAndWait(stream Event) returns (stream Event) {}
}